--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "argv-options",
-  "version": "0.1.0-alpha",
+  "version": "0.1.0-alpha.1",
   "description": "opinionated argv options parser",
   "main": "index.js",
   "repository": {},
